--- a/products.html
+++ b/products.html
@@ -4,11 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>منتجاتنا - روابي بلادنا</title>
-<<<<<<< HEAD
-    <link rel="stylesheet" href="styles/main.css">
-=======
+
     <link rel="stylesheet" href="styles/main.css" />
->>>>>>> ed02499 (Initial commit)
+
     <link
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&family=Noto+Naskh+Arabic:wght@400;700&display=swap"
       rel="stylesheet"
@@ -25,7 +23,7 @@
           <a href="about.html">عن المصنع</a>
           <a href="products.html" class="active">المنتجات</a>
           <a href="distribution.html">خطة التوزيع</a>
-          <a href="quality.html">الجودة الاستدامة</a>
+          <a href="quality.html">الجودة والاستدامة</a>
           <a href="target-groups.html">الفئات المستهدفة</a>
           <a href="contact.html">اتصل بنا</a>
         </div>
