--- a/quality.html
+++ b/quality.html
@@ -37,31 +37,7 @@
         </div>
       </section>
 
-<<<<<<< HEAD
       <!-- إحصائيات الجودة -->
-      <section class="quality-stats">
-        <div class="stats-grid">
-          <div class="stat-card">
-            <div class="stat-icon">⭐</div>
-            <div class="stat-number">15+</div>
-            <div class="stat-label">سنوات خبرة</div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">🏆</div>
-            <div class="stat-number">100%</div>
-            <div class="stat-label">مطابقة للمعايير</div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">🔬</div>
-            <div class="stat-number">50+</div>
-            <div class="stat-label">فحص يومي</div>
-          </div>
-          <div class="stat-card">
-            <div class="stat-icon">📋</div>
-            <div class="stat-number">25+</div>
-            <div class="stat-label">شهادة معتمدة</div>
-=======
-      <!-- تحديث قسم إحصائيات الجودة -->
       <section class="quality-stats">
         <div class="container">
           <h2 class="section-title">إحصائيات الجودة</h2>
@@ -73,7 +49,6 @@
                 <div class="stat-label">سنوات خبرة</div>
               </div>
             </div>
-
             <div class="stat-card">
               <div class="stat-icon">🏆</div>
               <div class="stat-content">
@@ -81,7 +56,6 @@
                 <div class="stat-label">مطابقة للمعايير</div>
               </div>
             </div>
-
             <div class="stat-card">
               <div class="stat-icon">🔬</div>
               <div class="stat-content">
@@ -89,7 +63,6 @@
                 <div class="stat-label">فحص يومي</div>
               </div>
             </div>
-
             <div class="stat-card">
               <div class="stat-icon">📋</div>
               <div class="stat-content">
@@ -97,17 +70,14 @@
                 <div class="stat-label">شهادة معتمدة</div>
               </div>
             </div>
->>>>>>> ed02499 (Initial commit)
           </div>
         </div>
       </section>
 
-<<<<<<< HEAD
-      <!-- شهادات الجودة -->
-=======
       <!-- تحديث قسم الرؤية والرسالة والقيم -->
       <section class="vision-mission">
         <div class="container">
+          <h2 class="section-title">رؤيتنا ورسالتنا</h2>
           <div class="vm-cards">
             <!-- الرؤية -->
             <div class="vm-card">
@@ -146,14 +116,12 @@
       </section>
 
       <!-- إضافة قسم شهاداتنا المعتمدة -->
->>>>>>> ed02499 (Initial commit)
       <section class="certificates-section">
         <div class="container">
           <h2 class="section-title">شهاداتنا المعتمدة</h2>
           <div class="certificates-grid">
             <div class="certificate-card">
               <div class="certificate-icon">⚡</div>
-<<<<<<< HEAD
               <h3 class="certificate-title">ISO 22000</h3>
               <p class="certificate-subtitle">نظام إدارة سلامة الغذاء</p>
               <ul class="certificate-list">
@@ -194,28 +162,6 @@
                 <li>التحسين المستمر</li>
                 <li>رضا العملاء</li>
               </ul>
-=======
-              <h3>ISO 22000</h3>
-              <p>نظام إدارة سلامة الغذاء</p>
-            </div>
-
-            <div class="certificate-card">
-              <div class="certificate-icon">🌟</div>
-              <h3>HACCP</h3>
-              <p>نظام تحليل المخاطر</p>
-            </div>
-
-            <div class="certificate-card">
-              <div class="certificate-icon">✨</div>
-              <h3>ISO 14001</h3>
-              <p>نظام الإدارة البيئية</p>
-            </div>
-
-            <div class="certificate-card">
-              <div class="certificate-icon">💫</div>
-              <h3>ISO 9001</h3>
-              <p>نظام إدارة الجودة</p>
->>>>>>> ed02499 (Initial commit)
             </div>
           </div>
         </div>
@@ -230,13 +176,9 @@
               <div class="step-number">1</div>
               <div class="step-content">
                 <h3>اختيار المواد الخام</h3>
-<<<<<<< HEAD
-                <p>انتقاء أجود المواد الخام من موردين معتمدين عالمياً وفحصها بدقة</p>
-=======
                 <p>
                   انتقاء أجود المواد الخام من موردين معتمدين عالمياً وفحصها بدقة
                 </p>
->>>>>>> ed02499 (Initial commit)
               </div>
             </div>
 
@@ -260,13 +202,9 @@
               <div class="step-number">4</div>
               <div class="step-content">
                 <h3>التعبئة والتغليف</h3>
-<<<<<<< HEAD
-                <p>استخدام أحدث تقنيات التعبئة والتغليف الآمنة والصديقة للبيئة</p>
-=======
                 <p>
                   استخدام أحدث تقنيات التعبئة والتغليف الآمنة والصديقة للبيئة
                 </p>
->>>>>>> ed02499 (Initial commit)
               </div>
             </div>
           </div>
@@ -281,25 +219,17 @@
             <div class="sustainability-card">
               <div class="sustainability-icon">🌿</div>
               <h3>عبوات صديقة للبيئة</h3>
-<<<<<<< HEAD
-              <p>استخدام مواد قابلة للتحلل في التغليف وتقليل النفايات البلاستيكية</p>
-=======
               <p>
                 استخدام مواد قابلة للتحلل في التغليف وتقليل النفايات البلاستيكية
               </p>
->>>>>>> ed02499 (Initial commit)
             </div>
 
             <div class="sustainability-card">
               <div class="sustainability-icon">💧</div>
               <h3>ترشيد المياه</h3>
-<<<<<<< HEAD
-              <p>إعادة تدوير المياه في عمليات التصنيع وتطبيق أنظمة الري الذكي</p>
-=======
               <p>
                 إعادة تدوير المياه في عمليات التصنيع وتطبيق أنظمة الري الذكي
               </p>
->>>>>>> ed02499 (Initial commit)
             </div>
 
             <div class="sustainability-card">
