--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
             </div>
           </div>
 
-          <div class="contact-form-wrapper">
+          <div class="contact-form-wrapper" >
             <div class="contact-form-container">
               <h2 class="form-title">أرسل لنا رسالة</h2>
               <form class="contact-form" action="#" method="POST">
@@ -130,7 +130,7 @@
         </div>
       </section>
 
-      <section class="map-section">
+      <section class="map-section" style="margin-bottom: 2rem;">
         <div class="container">
           <h2 class="section-title">موقعنا</h2>
           <div class="map-container">
