--- a/products.html
+++ b/products.html
@@ -55,7 +55,10 @@
             <!-- الأجبان -->
             <div class="product-card" data-category="cheese">
               <div class="product-image">
-                <img src="images/cheese-white.jpg" alt="جبنة بيضاء" />
+                <img
+                  src="https://www.luluhypermarket.com/cdn-cgi/image/f=auto/medias/1182384-01.jpg-1200Wx1200H?context=bWFzdGVyfGltYWdlc3wzMTUzMjl8aW1hZ2UvanBlZ3xoMDUvaGExLzEyNjY3MzM0NzIxNTY2LzExODIzODQtMDEuanBnXzEyMDBXeDEyMDBIfGE2NmQ3MWU5ZTE3OTgzMGVhZDZkNTk4ZDcyODI3M2JlYmUwZDgyZGE0NDcwZTExYzZjNmY3ZDZkMjA1MzY4MGU"
+                  alt="جبنة بيضاء"
+                />
                 <div class="product-overlay">
                   <span class="product-category">الأجبان</span>
                 </div>
@@ -72,7 +75,10 @@
 
             <div class="product-card" data-category="cheese">
               <div class="product-image">
-                <img src="images/cheese-kashkaval.jpg" alt="جبنة قشقوان" />
+                <img
+                  src="https://th.bing.com/th/id/R.fe984ba112125493929692624c33cf51?rik=kCJeSOMSUy%2bpyw&riu=http%3a%2f%2fimages6.fanpop.com%2fimage%2fphotos%2f34600000%2fYellow-Cheese-colors-34605317-500-402.jpg&ehk=Vby6TjHW7ajM5AILQDpoB2%2bRFAAohWWPwh63l03A1zE%3d&risl=&pid=ImgRaw&r=0"
+                  alt="جبنة قشقوان"
+                />
                 <div class="product-overlay">
                   <span class="product-category">الأجبان</span>
                 </div>
@@ -90,7 +96,10 @@
             <!-- الألبان -->
             <div class="product-card" data-category="dairy">
               <div class="product-image">
-                <img src="images/labneh.jpg" alt="لبنة طازجة" />
+                <img
+                  src="https://th.bing.com/th/id/OIP.LFTPXu22OFTWq1at2xievgHaE8?rs=1&pid=ImgDetMain"
+                  alt="لبنة طازجة"
+                />
                 <div class="product-overlay">
                   <span class="product-category">الألبان</span>
                 </div>
@@ -108,7 +117,10 @@
             <!-- كريمة الشوكولاتة -->
             <div class="product-card" data-category="chocolate">
               <div class="product-image">
-                <img src="images/chocolate-cream.jpg" alt="كريمة شوكولاتة" />
+                <img
+                  src="https://th.bing.com/th/id/OIP.v4q1ZY43oIS0eFLEMNhRggHaGg?rs=1&pid=ImgDetMain"
+                  alt="كريمة شوكولاتة"
+                />
                 <div class="product-overlay">
                   <span class="product-category">كريمة الشوكولاتة</span>
                 </div>
